--- a/app/src/main/res/layout/receive_file.xml
+++ b/app/src/main/res/layout/receive_file.xml
@@ -107,59 +107,61 @@
                     android:textColor="#A3A3A3" />
             </LinearLayout>
 
-            <androidx.cardview.widget.CardView
-                android:layout_width="275dp"
+
+            <RelativeLayout
+                android:layout_width="250dp"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="5dp"
-                app:cardBackgroundColor="@android:color/transparent"
-                app:cardCornerRadius="6dp"
-                app:cardElevation="2dp">
+                android:background="@drawable/from_msg_background"
+                android:padding="8dp">
 
-                <LinearLayout
-                    android:layout_width="match_parent"
+                <ImageView
+                    android:id="@+id/file_icon"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:padding="8dp">
+                    android:layout_alignParentStart="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginEnd="5dp"
+                    android:tint="#F3F3F3"
+                    app:srcCompat="@drawable/baseline_insert_drive_file_24" />
 
-                    <ImageView
-                        android:id="@+id/file_icon"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="5dp"
-                        android:layout_weight="1"
-                        android:tint="#F3F3F3"
-                        app:srcCompat="@drawable/baseline_insert_drive_file_24" />
+                <TextView
+                    android:id="@+id/file_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginEnd="5dp"
+                    android:layout_toRightOf="@id/file_icon"
+                    android:layout_weight="1"
+                    android:text="app-debu.apk app-"
+                    android:textColor="#FFFFFF"
+                    android:textSize="18sp" />
 
-                    <TextView
-                        android:id="@+id/file_name"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="5dp"
-                        android:layout_weight="1"
-                        android:text="app-debu.apk app-"
-                        android:textColor="#B3B0B0"
-                        android:textSize="18sp" />
+                <ImageButton
+                    android:id="@+id/download_file"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginEnd="5dp"
+                    android:background="@android:color/transparent"
+                    android:visibility="visible"
+                    app:srcCompat="@android:drawable/stat_sys_download" />
 
-                    <ImageButton
-                        android:id="@+id/download_file"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center|right"
-                        android:layout_margin="5dp"
-                        android:layout_weight="1"
-                        android:background="@android:color/transparent"
-                        android:visibility="visible"
-                        app:srcCompat="@android:drawable/stat_sys_download" />
+                <ProgressBar
+                    android:id="@+id/download_progress"
+                    style="?android:attr/progressBarStyle"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginEnd="5dp"
+                    android:layout_weight="1"
+                    android:visibility="gone" />
+            </RelativeLayout>
 
-                    <ProgressBar
-                        android:id="@+id/download_progress"
-                        style="?android:attr/progressBarStyle"
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
-                        android:layout_weight="1"
-                        android:visibility="gone" />
-                </LinearLayout>
-            </androidx.cardview.widget.CardView>
 
             <LinearLayout
                 android:layout_width="match_parent"
