--- a/app/src/main/res/layout/send_file.xml
+++ b/app/src/main/res/layout/send_file.xml
@@ -109,7 +109,38 @@
                         android:textColor="#A3A3A3" />
                 </LinearLayout>
 
-                
+                <RelativeLayout
+                    android:layout_width="250dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="5dp"
+                    android:background="@drawable/to_msg_background"
+                    android:padding="8dp">
+
+                    <ImageView
+                        android:id="@+id/file_icon"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentStart="true"
+                        android:layout_centerVertical="true"
+                        android:layout_marginStart="5dp"
+                        android:layout_marginEnd="5dp"
+                        android:tint="#F3F3F3"
+                        app:srcCompat="@drawable/baseline_insert_drive_file_24" />
+
+                    <TextView
+                        android:id="@+id/file_name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_marginStart="5dp"
+                        android:layout_marginEnd="5dp"
+                        android:layout_toRightOf="@id/file_icon"
+                        android:layout_weight="1"
+                        android:text="app-debu.apk app-"
+                        android:textColor="#B3B0B0"
+                        android:textSize="18sp" />
+
+                </RelativeLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -170,7 +201,6 @@
                         android:layout_height="20dp"
                         android:layout_gravity="right"
                         android:visibility="visible" />
-
                 </LinearLayout>
             </LinearLayout>
     </RelativeLayout>
