--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,4 +34,30 @@
         app:fabCustomSize="55dp"
         app:srcCompat="@drawable/add" />
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/add_chat"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin"
+        android:backgroundTint="@color/background_tab_pressed"
+        android:clickable="true"
+        android:elevation="10dp"
+        android:translationY="-65dp"
+        app:fabCustomSize="55dp"
+        app:srcCompat="@drawable/baseline_person_add_white_24" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/add_group"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin"
+        android:backgroundTint="@color/background_tab_pressed"
+        android:clickable="true"
+        android:elevation="10dp"
+        android:translationY="-130dp"
+        app:fabCustomSize="55dp"
+        app:srcCompat="@drawable/baseline_group_add_white_36" />
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
